# audio-semantic-search-for-journalists

./: .env.models.example  .gitignore  .pre-commit-config.yaml  DATASET.md  INSTALL.md  MCP_SETUP.md  README.md  audio_conversion.py  audio_embeddings.py  audio_transcription.py  build_corpus_dataset.sh  clean_dataset.sh  config_loader.py  download-from-youtbe.sh  pyproject.toml  query_client.py  quick_install.sh  requirements-minimal.txt  requirements.txt  run_cmd_line.sh  run_streamlit.sh  semantic_audio_mapping.py  semantic_audio_search.py  semantic_search.py  text_embeddings.py
.github/workflows/: deploy-cloud-run.yml
doc/: DATASET.md  INSTALL.md  ORGANIZACION.md  README.md  agent-ai.md  test_suite_overview.md
docs/: DATASET.md  GPU_CONSIDERATIONS.md  INSTALL.md  PYTHON_VERSION.md  README.md  TROUBLESHOOTING.md
examples/demos/: cli_audio_search.py
mcp_server/: AUDIO_PLAYBACK.md  README.md  TROUBLESHOOTING.md  __init__.py  pyproject.toml  requirements_full.txt  requirements_minimal.txt  server.py  start_mcp_minimal.sh  start_mcp_uv.sh  start_uv.py  test_audio_playback.py  test_audio_playback_real.py  test_path_fix.py  test_server.py
scripts/: README.md  fix_ruff_errors.py
scripts/shell/: download-from-youtbe.sh
scripts/tools/: fix_ruff_errors.py
services/: .dockerignore  .env.example  .gitignore
services/app/: __init__.py
services/src/: __init__.py
services/terraform/: .gitignore
services/tests/: __init__.py
src/: ARCHITECTURE.md  ARCHITECTURE_simple.md  add_real_yamnet_to_dataset.py  add_sentiment_to_dataset.py  audio_conversion.py  audio_embeddings.py  audio_transcription.py  audioset_ontology.py  check_dataset_models.py  check_yamnet_requirements.py  clap_audio_embeddings.py  config_loader.py  dataset_orchestrator.py  detect_audio_events.py  embedding_evaluation_framework.py  enhanced_semantic_search.py  hybrid_audio_search.py  improved_audio_search.py  models_config.py  query_client.py  regenerate_audio_embeddings.py  resume_pipeline.py  run_dataset_pipeline.py  search_config.py  semantic_audio_mapping.py  semantic_heatmap_visualizer.py  semantic_search.py  sentiment_analysis.py  simple_dataset_pipeline.py  spectrogram_evaluation.py  speechdpr_audio_embeddings.py  text_embeddings.py  vector_database_config.py  vector_database_interface.py  vector_db_chromadb.py  vector_db_faiss.py  vector_indexing.py  verify_dataset.py  visualization_dashboard.py
src/agent_service/: __init__.py  agent.py  main.py  search_engine.py  tools.py
tests/: __init__.py  run.py  test_catalog.json
tests/artifacts/audio_embeddings_simple/: embeddings_results.json
tests/artifacts/benchmark_quick/evaluation_results/: benchmark_results.json  model_info.json
tests/artifacts/benchmark_quick/test_data/: evaluation_dataset_dataset.csv  evaluation_dataset_dataset.json  evaluation_dataset_queries.json  evaluation_dataset_stats.json
tests/common/: path_utils.py
tests/functional/: test_all_models.py  test_audio_embeddings_simple.py  test_audio_segment_extraction.py  test_fixed_detection.py  test_music_search_fix.py  test_simple_benchmark.py  test_yamnet_raw_output.py
tests/integration/: test_benchmark_quick.py  test_clap_direct.py  test_clap_full_download.py  test_models_config.py  test_semantic_heatmap_integration.py  test_speechdpr_implementation.py  test_supabase_integration.py  test_vector_databases.py
tests/integration/mcp/: test_audio_playback.py  test_audio_playback_real.py  test_audio_player.py  test_path_fix.py  test_server.py
tests/legacy/bugfix/: test_timestamp_fix.py
tests/legacy/tmp/: test_api_complete.py  test_indices_fix.py  test_integration_simple.py  test_mcp_dataset.py  test_mcp_startup.py  test_sentiment_search.py
tests/resources/: test_config.json
tests/unit/: test_framework_components.py
