[tool.poetry]
name = "audio-semantic-search-for-journalists"
version = "1.0.0"
description = "Sistema de búsqueda semántica multimodal (texto y audio) para contenido de audio hablado con enfoque periodístico"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/yourusername/audio-semantic-search-for-journalists"
repository = "https://github.com/yourusername/audio-semantic-search-for-journalists"
keywords = ["audio", "semantic-search", "nlp", "whisper", "embeddings", "journalism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.poetry.dependencies]
python = "3.11.13"
# Core ML libraries
# Nota: numpy debe ser <2.0.0 por compatibilidad con laion-clap
numpy = ">=1.23.5,<2.0.0"
# Nota: triton solo funciona en Linux (para CUDA). En macOS usamos MPS.
triton = {version = ">=2.0.0", optional = true, markers = "sys_platform == 'linux'"}
openai-whisper = "^20231117"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
librosa = "^0.10.0"
pandas = "^1.5.0"
laion-clap = "^1.1.7"

# External AI APIs
google-generativeai = "*"
openai = "*"
transformers = "^4.20.0"

# LangChain for agent functionality and scene detection
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.0"

# Audio processing
soundfile = "^0.12.0"
pydub = "^0.25.0"
ffmpeg-python = "^0.2.0"

# TensorFlow (optional for YAMNet)
tensorflow = {version = "^2.17.0", optional = true}
tensorflow-hub = {version = "^0.14.0", optional = true}

# Web API
plotly = "^5.15.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
# Nota: python-multipart y httpx deben ser compatibles con mcp
# mcp requiere: python-multipart >=0.0.9 O httpx >=0.27
python-multipart = ">=0.0.9"
slowapi = "^0.1.9"
mcp = "^1.0.0"
httpx = ">=0.27"
aiofiles = "^23.0.0"
psutil = "^5.9.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[tool.poetry.extras]
yamnet = ["tensorflow", "tensorflow-hub"]
all = ["tensorflow", "tensorflow-hub"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.8.0"
pre-commit = "^3.0.0"  # Para git hooks automáticos
black = "^22.0.0"  # Mantenido para compatibilidad, ruff puede reemplazarlo
isort = "^5.0.0"  # Mantenido para compatibilidad, ruff puede reemplazarlo
flake8 = "^5.0.0"  # Mantenido para compatibilidad, ruff puede reemplazarlo
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Configuración de Ruff (reemplaza black, isort y flake8)
[tool.ruff]
# Longitud de línea compatible con black
line-length = 88
target-version = "py311"

# Excluir directorios comunes
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

# Habilitar reglas de formato (compatible con black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Habilitar reglas de linting (compatible con flake8)
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (manejado por formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "F401",   # imported but unused (muy común en proyectos existentes)
    "F841",   # local variable assigned but never used
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "ARG003", # unused class method argument
    "ARG004", # unused static method argument
    "ARG005", # unused lambda argument
    "UP007",  # use X | Y for type annotations (muy estricto para proyectos existentes)
    "RET504", # unnecessary assignment before return
    "SIM108", # use ternary operator instead of if-else-block
    "T201",   # print statements (común en scripts)
    "T203",   # pprint statements
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

# Configuración de isort (compatible con black)
[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
split-on-trailing-comma = true
