[project]
name = "audio-search-mcp-server"
version = "1.0.0"
description = "MCP Server for Audio Semantic Search for Journalists"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.12.0",
    "tensorflow-hub>=0.14.0",
    "faiss-cpu>=1.7.4",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "openai-whisper>=20231117",
    "pysentimiento>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0"
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
mqtt = ["asyncio-mqtt"]
all = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "asyncio-mqtt"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "isort>=5.12.0", "flake8>=6.0.0", "mypy>=1.5.0"]

[project.scripts]
audio-search-mcp = "server:main"
audio-search-test = "test_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["audio_search_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Poetry compatibility (optional)
[tool.poetry]
name = "audio-search-mcp-server"
version = "1.0.0"
description = "MCP Server for Audio Semantic Search for Journalists"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.0"
transformers = "^4.30.0"
torch = {version = "^2.0.0", markers = "platform_machine != 'arm64' or platform_system != 'Darwin'"}
torch-cpu = {version = "^2.0.0", markers = "platform_machine == 'arm64' and platform_system == 'Darwin'", optional = true}
torchaudio = "^2.0.0"
tensorflow = {version = "^2.12.0", optional = true}
tensorflow-hub = {version = "^0.14.0", optional = true}
faiss-cpu = "^1.7.4"
librosa = "^0.10.0"
soundfile = "^0.12.0"
openai-whisper = "^20231117"
pysentimiento = "^0.7.0"
python-dotenv = "^1.0.0"
pydub = "^0.25.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]
mqtt = ["asyncio-mqtt"]
all = ["fastapi", "uvicorn", "asyncio-mqtt"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"